src/sma-client/app/views/intro/styles/intro.styl
#loginErrorPopup

    #loginPopupPadding
        display: block
        width: 190px
        min-height: 90px
        padding: 10px

    #fail
        font-family: "Open Sans"
        font-size: 130%
        font-weight: 100
        letter-spacing: 1px
        color: #F99
        padding: 0 10px 0 10px

#frontPage
    background-color: #FFF

    h2.legend
        width: 90%
        text-align: center
        font-size: 100%
        font-weight: 700
        margin-top: .25em
        margin-bottom: .25em

    #help_language
        padding-top: 0px

    p.message
        font-size: 120%
        margin-left: 5px

    .message.error
        color: #900

    #create_account, #create_account_or_login
        display: block
        position: relative
        width: 100%
        border-bottom: none

        h2.legend
            margin-left: 0

        fieldset
            margin: 0 auto
            width: 95%
            position: relative

    .grouped_fields
        margin-top: .75em

        .grouped_field

            position: relative
            display: block
            width: 100%
            height: 3em
            border: 1px solid #333
            background-color: #333
            border-radius: 15px
            margin-bottom: 1.5em

            label
                position: absolute
                display: block
                left: 0
                line-height: 3em
                width: 35%
                height: 100%
                color: #FFF
                text-shadow: none
                background-color: transparent
                float: left
                padding-left: 5px
                text-align: right

            input
                position: absolute
                display: block
                top: 0
                right: 0
                width: 65%
                height: 3em
                padding: 0 0 0 0
                margin: 0 0 0 0
                border: none
                background-color: transparent
                color: #FFF
                text-indent: 10px

        .grouped_field.error
            border: 1px solid #533
            background-color: #533

    #front_page_content
        display: block
        margin: 0 auto
        max-width: 400px

    #create_account, #create_account_or_login
        margin-top: 0
        padding-top: 0

    [data-mini="true"]
        label
            line-height: 1.5em
            padding-bottom: 10px
            height: 40px

            .ui-btn-inner
                height: 40px
                line-height: 1.5em

                .ui-btn-text
                    margin-top: 10px

    .smaller
        .legend
            font-size: 130%

    #end
        display: block
        position:relative
        width: 100%
        margin-top: 1em

        a
            margin: 0 auto
            width: 66%
            

    p
        font-family: "Open Sans", sans-serif

    p.lead
        font-size: 110%
        margin-top: .25em
        margin-bottom: .25em
        line-height: 1.3em
        font-weight: 400
        padding: 2px
        text-align: justify
        letter-spacing: -1px

    p.help
        font-size: 90%
        line-height: 1.2em
        font-weight: normal
        margin-left: .5em
        margin-right: .5em
        margin-bottom: 0

    .question_block
        h2.legend
            font-family: "Open Sans", sans-serif
            font-weight: 300
            margin-bottom: .25em
            margin-top: 0

    .front_page_nav
        margin-top: .75em

        #next
            float: right

    form#user
        input.error
            border-color: #900
            outline: none
            color: #EBAFAF
        span.error
            color: #900
            font-weight: bold

